# Sirocco

./: .envrc  404.html  README.md  index.html  pyproject.toml  setupcomp.py  sitemap.xml  spack.yaml
.github/workflows/: ci-icon.yml  ci.yaml  test-integration.yml
ADR/: Store_and_Array_Design.md
acknowledgements/: index.html
ci/: cscs.yml  preparerun.py
docs/: mkdocs.yml
docs/src/: acknowledgements.md
search/: search_index.json
src/sirocco/: cli.py  pretty_print.py  vizgraph.py  workgraph.py
src/sirocco/core/: __init__.py  graph_items.py  namelistfile.py  workflow.py
src/sirocco/core/_tasks/: __init__.py  icon_task.py  shell_task.py
src/sirocco/parsing/: __init__.py  _utils.py  _yaml_data_models.py  cycling.py  target_cycle.py  when.py  yaml_data_models.py
tests/: conftest.py  test_wc_workflow.py  test_workgraph.py
tests/cases/large/config/: config.yml
tests/cases/large/data/: config.txt  test_config_large.txt
tests/cases/large/data/ICON_namelists/: NAMELIST_exclaim_ape_R02B04_2025-07-01_00:00:00  icon_master.namelist_2025-01-01_00:00:00  icon_master.namelist_2026-09-01_00:00:00
tests/cases/parameters/config/: config.yml  test_config_parameters.yml
tests/cases/parameters/data/: config.txt  test_config_parameters.txt
tests/cases/small-icon/config/: config.yml
tests/cases/small-icon/config/ICON/: model.namelist
tests/cases/small-icon/data/: config.txt
tests/cases/small-icon/data/ICON_namelists/: icon_master.namelist_2026-01-01_00:00:00  icon_master.namelist_2026-05-01_00:00:00  model.namelist_2026-01-01_00:00:00
tests/cases/small-icon/ir/: test_config_small.new.txt
tests/cases/small-shell/config/: config.yml
tests/cases/small-shell/data/: config.txt
tests/cases/small/config/: config.yml
tests/cases/small/config/ICON/: NAMELIST_exclaim_ape_R02B04  icon_master.namelist  model.namelist
tests/cases/small/data/: config.txt
tests/unit_tests/: test_cli.py
tests/unit_tests/core/: test_workflow.py
tests/unit_tests/parsing/: test_yaml_data_models.py
